// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`property / recordPreview should not render with a boolean date 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center; color: white;"
    >
      <div
        class="card-title h5"
      >
        Example Record
      </div>
      <img
        class="rounded"
        src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=100.png"
        style="max-width: 100px; width: 100%;"
      />
      <br />
      <a
        class="card-link"
        href="/record/asdf/edit"
        style="color: white;"
      >
        View Record
      </a>
      <br />
      <small>
        change
      </small>
    </div>
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item list-group-item-success"
      >
        <strong>
          test-key
        </strong>
        :
         
        ...
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          date
        </strong>
        :
         
      </div>
    </div>
  </div>
</div>
`;

exports[`property / recordPreview should not render with a null date 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center; color: white;"
    >
      <div
        class="card-title h5"
      >
        Example Record
      </div>
      <img
        class="rounded"
        src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=100.png"
        style="max-width: 100px; width: 100%;"
      />
      <br />
      <a
        class="card-link"
        href="/record/asdf/edit"
        style="color: white;"
      >
        View Record
      </a>
      <br />
      <small>
        change
      </small>
    </div>
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item list-group-item-success"
      >
        <strong>
          test-key
        </strong>
        :
         
        ...
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          date
        </strong>
        :
         
      </div>
    </div>
  </div>
</div>
`;

exports[`property / recordPreview should render a whole user record including the date 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center; color: white;"
    >
      <div
        class="card-title h5"
      >
        Example Record
      </div>
      <img
        class="rounded"
        src="https://www.gravatar.com/avatar/6c6821dfc7df35b8eb1c91d33707b690?s=100.png"
        style="max-width: 100px; width: 100%;"
      />
      <br />
      <a
        class="card-link"
        href="/record/rec_87cc054b-7cc2-4eb4-8932-db1011056517/edit"
        style="color: white;"
      >
        View Record
      </a>
      <br />
      <small>
        change
      </small>
    </div>
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item list-group-item-success"
      >
        <strong>
          Draft Record Property
        </strong>
        :
         
        9/8/2021, 6:58:38 PM
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          userId
        </strong>
        :
         
        50
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          email
        </strong>
        :
         
        spenburton1d@demo.com
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          Deactivated
        </strong>
        :
         
        false
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          firstName
        </strong>
        :
         
        Sibeal
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          lastName
        </strong>
        :
         
        Penburton
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          LTV
        </strong>
        :
         
        341.66
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          lastPurchaseCategory
        </strong>
        :
         
        Toys
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          purchaseCount
        </strong>
        :
         
        6
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          fullName
        </strong>
        :
         
        Sibeal Penburton
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          Language
        </strong>
        :
         
        French
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          test_updated_at
        </strong>
        :
         
        9/8/2021, 6:58:38 PM
      </div>
    </div>
  </div>
</div>
`;

exports[`property / recordPreview should render successfully with no record preview 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center;"
    >
      Record preview unavailable
    </div>
  </div>
</div>
`;

exports[`property / recordPreview should render with a Date date 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center; color: white;"
    >
      <div
        class="card-title h5"
      >
        Example Record
      </div>
      <img
        class="rounded"
        src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=100.png"
        style="max-width: 100px; width: 100%;"
      />
      <br />
      <a
        class="card-link"
        href="/record/asdf/edit"
        style="color: white;"
      >
        View Record
      </a>
      <br />
      <small>
        change
      </small>
    </div>
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item list-group-item-success"
      >
        <strong>
          test-key
        </strong>
        :
         
        ...
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          date
        </strong>
        :
         
        9/8/2021, 6:58:38 PM
      </div>
    </div>
  </div>
</div>
`;

exports[`property / recordPreview should render with a number date 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center; color: white;"
    >
      <div
        class="card-title h5"
      >
        Example Record
      </div>
      <img
        class="rounded"
        src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=100.png"
        style="max-width: 100px; width: 100%;"
      />
      <br />
      <a
        class="card-link"
        href="/record/asdf/edit"
        style="color: white;"
      >
        View Record
      </a>
      <br />
      <small>
        change
      </small>
    </div>
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item list-group-item-success"
      >
        <strong>
          test-key
        </strong>
        :
         
        ...
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          date
        </strong>
        :
         
        9/8/2021, 6:58:38 PM
      </div>
    </div>
  </div>
</div>
`;

exports[`property / recordPreview should render with a string date 1`] = `
<div>
  <div
    class="card bg-light"
  >
    <div
      class="card-body"
      style="text-align: center; color: white;"
    >
      <div
        class="card-title h5"
      >
        Example Record
      </div>
      <img
        class="rounded"
        src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=100.png"
        style="max-width: 100px; width: 100%;"
      />
      <br />
      <a
        class="card-link"
        href="/record/asdf/edit"
        style="color: white;"
      >
        View Record
      </a>
      <br />
      <small>
        change
      </small>
    </div>
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item list-group-item-success"
      >
        <strong>
          test-key
        </strong>
        :
         
        ...
      </div>
      <div
        class="list-group-item list-group-item-light"
      >
        <strong>
          date
        </strong>
        :
         
        9/8/2021, 6:58:38 PM
      </div>
    </div>
  </div>
</div>
`;
